--- a/Index.html
+++ b/Index.html
@@ -16,9 +16,11 @@
     </header>
     <div class="Intro">
       Thank you for taking the time to visit my website! I coded it from scratch
-      (no template tools), in order to showcase my past work and creativity in a
-      portfolio. I hope you are able to find out more about me and understand my
-      skillset, as well as finding out what I can bring to your company.
+      using HTML, CSS and JavaScript (no template tools), in order to showcase
+      my past work and creativity in a portfolio. I hope you are able to find
+      out more about me and understand my skill set, as well as finding out what
+      I can bring to your company. If you interested in speaking further with
+      me, please don't hesitate to get in touch with me using the contact page.
     </div>
 
     <div class="subsection">
@@ -46,11 +48,20 @@
       <div class="centre">
         <a href="/Experience.html" style="margin: auto auto">
           <button type="button" class="button">
-            Qualification, Experience, Courses
+            Enquire Into My Achievements!
           </button>
         </a>
       </div>
       <div class="rightcertification"></div>
+    </div>
+    <div class="subsection">
+      <div class="lefthobby"></div>
+      <div class="centre">
+        <a href="/Hobbies.html" style="margin: auto auto">
+          <button type="button" class="button">See My Hobbies!</button>
+        </a>
+      </div>
+      <div class="righthobby"></div>
     </div>
     <div class="subsection">
       <div class="leftcontact"></div>
@@ -61,6 +72,7 @@
       </div>
       <div class="rightcontact"></div>
     </div>
+
     <footer>
       <a href="#">
         <button type="button">Up To Top</button>
