--- a/MoonConstellation.html
+++ b/MoonConstellation.html
@@ -18,7 +18,6 @@
     </header>
     <div class="container">
       <div class="section">
-        <img src="/images/MoonOrbital/MO1.gif" alt="" />
         <p>
           The task assigned to each team was to devise a satellite constellation
           to be set up around the moon that would provide total coverage of the
@@ -27,9 +26,9 @@
           verify and validate that our constellation fulfilled the main
           objectives.
         </p>
+        <img src="/images/MoonOrbital/MO1.gif" alt="" />
       </div>
       <div class="section">
-        <img src="/images/MoonOrbital/MO4.gif" alt="" />
         <p>
           There were many requirements to conform to, including the solar
           eclipse period and the launch windows, but my main task was to
@@ -44,34 +43,35 @@
           prograde/retrograde, no. satellites on each orbit, and all angles of
           orbit (inclination etc.).
         </p>
+        <img src="/images/MoonOrbital/MO4.gif" alt="" />
       </div>
       <div class="section">
-        <img src="/images/MoonOrbital/MO2.gif" alt="" />
         <p>
           Two other aspects I was responsible included modelling the
           pertubations into the ground coverage (animation exaggerates
-          pertubations to show them more clearly), and animating the orbit
-          transfer of the satellite from the carrier to the constellation. This
-          can be shown in the above and left animations respectively. The
-          success of my tasks were very reliant on strong communication between
-          other team members. These results were presented, to back up our
-          design decisions, and we were delighted to have defended our
-          constellation succesfully, without any changes needed.
+          pertubations to show them more clearly, above), and animating the
+          orbit transfer of the satellite from the carrier to the constellation
+          (below). The success of my tasks were very reliant on strong
+          communication between other team members. These results were
+          presented, to back up our design decisions, and we were delighted to
+          have defended our constellation succesfully, without any changes
+          needed.
         </p>
+        <img src="/images/MoonOrbital/MO2.gif" alt="" />
       </div>
       <div class="section">
-        <img src="/images/MoonOrbital/MO3.jpg" alt="" />
         <p>
-          The graphs opposite illustate the total ground coverage by a minimum
-          of 4, 5 and 6 satellites. The left graph is when 3 satellites are
-          present on each orbit, and the right is for 4 on each orbit. The left
-          graph takes several dips in 100% coverage by 4 satellites, hence it
-          fails the objective and reinforces our decision for 4 satellites per
-          orbit. Since the orbit is periodic, there will always be coverage by 4
+          The graphs below illustate the total ground coverage by a minimum of
+          4, 5 and 6 satellites. The left graph is when 3 satellites are present
+          on each orbit, and the right is for 4 on each orbit. The left graph
+          takes several dips in 100% coverage by 4 satellites, hence it fails
+          the objective and reinforces our decision for 4 satellites per orbit.
+          Since the orbit is periodic, there will always be coverage by 4
           satellites across the moon with this arrangement. All code was managed
           using Git and GitHub, with my teammates Duncan Wither and Laurence
           Donkers.
         </p>
+        <img src="/images/MoonOrbital/MO3.jpg" alt="" />
       </div>
     </div>
     <div class="skills">
