--- a/ProjectTree.html
+++ b/ProjectTree.html
@@ -13,11 +13,13 @@
           <img src="/icons/BackIcon.png" alt="" /></button
       ></a>
       <h1>Check Out My Projects!</h1>
-      <img
-        src="/icons/GitHubIcon.png"
-        alt=""
-        style="height: 40px; width: 40px"
-      />
+      <a href="https://github.com/Ahrenman1" target="_blank">
+        <img
+          src="/icons/GitHubIcon.png"
+          alt=""
+          style="height: 50px; width: 50px"
+        />
+      </a>
     </header>
     <div class="banner">
       <img src="/icons/MioTagIcon.png" alt="" />
@@ -61,6 +63,18 @@
       <img src="/gifs/MoonOrbit.gif" alt="" />
       <a href="MoonConstellation.html" style="margin: auto auto">
         <button class="button" type="button">Click For More Info!</button>
+      </a>
+    </div>
+    <div class="banner">
+      <img src="/icons/More.png" alt="" />
+      <p style="text-align: center">More Mini Projects!</p>
+      <img src="/icons/More.png" alt="" />
+    </div>
+    <div class="layout">
+      <a href="MiniProjects.html" style="margin: 40px auto">
+        <button class="button" type="button" style="margin-bottom: 0">
+          Click For More Info!
+        </button>
       </a>
     </div>
     <footer>
