--- a/SkillSet.html
+++ b/SkillSet.html
@@ -32,7 +32,9 @@
         <img src="/Skills/TeamWork.png" alt="" />
         <h1>Team Work</h1>
         <p>
-          Having been a part of teams in swimming, work, University and Space School, I have always engaged well with everyone and been an adaptable member.
+          Having been a part of teams in swimming, work, University and Space
+          School, I have always engaged well with everyone and been an adaptable
+          member.
         </p>
       </div>
     </div>
@@ -41,14 +43,16 @@
         <img src="/Skills/Organisation.png" alt="" />
         <h1>Organisation</h1>
         <p>
-          I have been part of fast paced companies and projects, requiring strong organisation skills to perform under pressure.
+          I have been part of fast paced companies and projects, requiring
+          strong organisation skills to perform under pressure.
         </p>
       </div>
       <div>
         <img src="/Skills/Creativity.png" alt="" />
         <h1>Creativity</h1>
         <p>
-          I take great pride in how I design and present a project, as I believe taking bold creative decisions improves projects dramatically.
+          I take great pride in how I design and present a project, as I believe
+          taking bold creative decisions improves projects dramatically.
         </p>
       </div>
     </div>
@@ -57,14 +61,16 @@
         <img src="/Skills/Communication.png" alt="" />
         <h1>Communication</h1>
         <p>
-          I can work with all different types of personality, and thoroughly enjoy engaging with new people.
+          I can work with all different types of personality, and thoroughly
+          enjoy engaging with new people.
         </p>
       </div>
       <div>
         <img src="/Skills/Innovation.png" alt="" />
         <h1>Innovation</h1>
         <p>
-          Optimising and thinking outside the box are key considerations whenever I have tasks to complete.
+          Optimising and thinking outside the box are key considerations
+          whenever I have tasks to complete.
         </p>
       </div>
     </div>
@@ -73,24 +79,36 @@
         <img src="/Skills/TimeManagement.png" alt="" />
         <h1>Time Management</h1>
         <p>
-          I am dedicated and motivated to sticking to a schedule, and make sure my tasks are completed reliably, on time and to a high standard.
+          I am dedicated and motivated to sticking to a schedule, and make sure
+          my tasks are completed reliably, on time and to a high standard.
         </p>
       </div>
     </div>
-    <div id="seperator"><h1>Programming Languages <br><span>* I thoroughly enjoy learning new languages and I pick up programming skills quickly *</span></h1></div>
+    <div id="seperator">
+      <h1>
+        Programming Languages <br /><span
+          >* I thoroughly enjoy learning new languages and I pick up programming
+          skills quickly *</span
+        >
+      </h1>
+    </div>
     <div>
       <div>
         <img src="/Skills/C.png" alt="" />
         <h1>C Programming</h1>
         <p>
-          I have used C throughout University, in the MSP430 range, OMAP-L138 Kit, and Arduinos. I have also taken several Udemy courses in my own time to enhance my knowledge
+          I have used C throughout University, in the MSP430 range, OMAP-L138
+          Kit, and Arduinos. I have also taken several Udemy courses in my own
+          time to enhance my knowledge
         </p>
       </div>
       <div>
         <img src="/Skills/Python.png" alt="" />
         <h1>Python</h1>
         <p>
-          I have used this in my dissertation, and my sound following robot project, where I led the code development. I have also been a part of a Python course at University. 
+          I have used this in my dissertation, and my sound following robot
+          project, where I led the code development. I have also been a part of
+          a Python course at University.
         </p>
       </div>
     </div>
@@ -99,14 +117,18 @@
         <img src="/Skills/MATLAB.png" alt="" />
         <h1>MATLAB</h1>
         <p>
-         I used this language extensively throughout University for advanced robotics, orbital constellation simulation, image processing, deep neural networks etc.
+          I used this language extensively throughout University for advanced
+          robotics, orbital constellation simulation, image processing, deep
+          neural networks etc.
         </p>
       </div>
       <div>
         <img src="/Skills/PHP.png" alt="" />
         <h1>PHP</h1>
         <p>
-          I used this to give server functionality to my Wi-Fi activity monitor, which accessed an SQL database to input and retrieve information about users for my application.
+          I used this to give server functionality to my Wi-Fi activity monitor,
+          which accessed an SQL database to input and retrieve information about
+          users for my application.
         </p>
       </div>
     </div>
@@ -114,12 +136,18 @@
       <div>
         <img src="/Skills/HTML.png" alt="" />
         <h1>HTML</h1>
-        <img src="/Skills/Stars/ThreeOfFiveStars.png" alt="" class="starrating">
+        <p>
+          Take this website as an example! I coded it from scratch and
+          thoroughly enjoyed being creative in presenting myself.
+        </p>
       </div>
       <div>
         <img src="/Skills/CSS.png" alt="" />
         <h1>CSS</h1>
-        <img src="/Skills/Stars/ThreeOfFiveStars.png" alt="" class="starrating">
+        <p>
+          Similar to HTML, I have good knowledge of CSS, and used it
+          significantly when building this website.
+        </p>
       </div>
     </div>
     <div>
@@ -127,16 +155,18 @@
         <img src="/Skills/VHDL.png" alt="" />
         <h1>VHDL</h1>
         <p>
-          I believe no issue is too difficult to tackle, having used this skill
-          throughout project work and employment
+          I used this language to program an FPGA to create a flow monitor which
+          could receive input from a user and simulate and display the resultant
+          output.
         </p>
       </div>
       <div>
         <img src="/Skills/Java.png" alt="" />
         <h1>JavaScript</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
-          sapiente?
+          I have taken a course on JavaScript and used it a little for this
+          website. Although I have not used it as much as other languages, I
+          really enjoy using it and I am looking to learn more.
         </p>
       </div>
     </div>
@@ -145,29 +175,32 @@
         <img src="/Skills/Simulink.png" alt="" />
         <h1>Simulink</h1>
         <p>
-          I believe no issue is too difficult to tackle, having used this skill
-          throughout project work and employment
+          Not so much a language, but I used this a lot over my University
+          years. Developed a bouncing ball model for Systems Engineering
+          analysis, and for DSP filtering with Xilinx Tools.
         </p>
       </div>
     </div>
     <div id="seperator">
-        <h1>Technical Abilities</h1>
+      <h1>Technical Abilities</h1>
     </div>
     <div>
       <div>
         <img src="/Skills/SolidWorks.png" alt="" />
         <h1>SolidWorks CAD</h1>
         <p>
-          I believe no issue is too difficult to tackle, having used this skill
-          throughout project work and employment
+          I have the CSWA certification, and have fully designed the smart glove
+          frame and 3D printed mold. I have also using this skill to produce a
+          frame for my 4<sup>th</sup> year team's obstacle avoidance robot.
         </p>
       </div>
       <div>
         <img src="/Skills/Git.png" alt="" />
         <h1>Git Version Control</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
-          sapiente?
+          I am very familiar with Git, having taken an online course to better
+          understand it, and used it for managing files on several projects,
+          including this website.
         </p>
       </div>
     </div>
@@ -176,16 +209,17 @@
         <img src="/Skills/PCB.png" alt="" />
         <h1>PCB Design</h1>
         <p>
-          I believe no issue is too difficult to tackle, having used this skill
-          throughout project work and employment
+          I have designed PCB's before, most notable for my smart glove master's
+          project.
         </p>
       </div>
       <div>
         <img src="/Skills/DSP.png" alt="" />
         <h1>Digital Signal Processing</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
-          sapiente?
+          My electives for 4<sup>th</sup> and 5<sup>th</sup> year heavily
+          involved DSP principles, and all the classes required a great deal of
+          programming to build on my knowledge.
         </p>
       </div>
     </div>
@@ -194,16 +228,18 @@
         <img src="/Skills/Ansys.png" alt="" />
         <h1>Ansys FEA</h1>
         <p>
-          I believe no issue is too difficult to tackle, having used this skill
-          throughout project work and employment
+          As part of my computer aided design course, I used Ansys to generate
+          and test a boxing fixture for stress, strain and deformation.
         </p>
       </div>
       <div>
         <img src="/Skills/OrbitalMech.png" alt="" />
         <h1>Orbital Mechanics</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
-          sapiente?
+          I learned about the principles and derivation of orbital mechanics at
+          University, and enjoyed implementing them in MATLAB simulations where
+          my team and I devised and tested a satellite constellation around the
+          moon.
         </p>
       </div>
     </div>
@@ -212,26 +248,31 @@
         <img src="/Skills/MC.png" alt="" />
         <h1>Low Level Microcontroller Programming</h1>
         <p>
-          I believe no issue is too difficult to tackle, having used this skill
-          throughout project work and employment
+          I studied some low level microcontroller programming in University,
+          but took it further outside University by completing Udemy courses on
+          embedded C, driver development and communcation protocols out of
+          personal interest.
         </p>
       </div>
       <div>
         <img src="/Skills/WebDesign.png" alt="" />
         <h1>Front End Web Design</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
-          sapiente?
+          Take this website as evidence! I really enjoyed working on this site,
+          and put a lot of effort into the design, scalability (changing screen
+          size) and the file management of it.
         </p>
       </div>
     </div>
     <div id="single">
       <div>
         <img src="/Skills/DeepLearning.png" alt="" />
-        <h1>Deep Learning/Machine Learning</h1>
+        <h1>Deep Learning / Machine Learning</h1>
         <p>
-          I believe no issue is too difficult to tackle, having used this skill
-          throughout project work and employment
+          As part of my image and video processing classes, I learned a lot
+          about CNN's, regression networks, multilayer perceptrons etc. I also
+          completed several projects which centred about deep learning, such as
+          for posture detection and Beijing pollution.
         </p>
       </div>
     </div>
@@ -239,7 +280,11 @@
       <a href="#">
         <button type="button">Up To Top</button>
       </a>
-      <h1>Want To See How I Applied These Skills?<br /><br>Check My Projects!</h2>
+      <a href="/ProjectTree.html"
+        ><h1>
+          Want To See How I Applied These Skills?<br /><br />Check My Projects!
+        </h1></a
+      >
       <h1>Copyright &copy; Ahren McTaggart 2020</h1>
     </footer>
   </body>
