--- a/SoundFollowingRobot.html
+++ b/SoundFollowingRobot.html
@@ -14,11 +14,12 @@
           <img src="/icons/BackIcon.png" alt="" /></button
       ></a>
       <h1>Sound Following Robot</h1>
-      <img src="/icons/YouTubeIcon.png" alt="" style="height: 30%" />
+      <a href="https://www.youtube.com/watch?v=HzlOGVEUZak" target="_blank">
+        <img src="/icons/YouTubeIcon.png" alt="" style="height: 40px" />
+      </a>
     </header>
     <div class="container">
       <div class="section">
-        <img src="/images/SoundFollower/SF1.jpg" alt="" />
         <p>
           This is a team project I completed in my third year of University. The
           goal was to develop a robot that was capable of following noise of a
@@ -28,9 +29,9 @@
           and allowed us to put our own spin on the design and functionality of
           the robot.
         </p>
+        <img src="/images/SoundFollower/SF1.jpg" alt="" />
       </div>
       <div class="section">
-        <img src="/images/SoundFollower/SF2.JPG" alt="" />
         <p>
           A Raspberry Pi 3 was selected to process the sound and control the
           motors. In the Raspberry Pi, the Idle IDE was used, hence Python was
@@ -38,9 +39,9 @@
           Ultrasound sensor and L293D motor controller were integrated to make
           the robot fully operational.
         </p>
+        <img src="/images/SoundFollower/SF2.JPG" alt="" />
       </div>
       <div class="section">
-        <img src="/images/SoundFollower/SF3.jpg" alt="" />
         <p>
           My role in the team was project manager and programming lead. I was
           responsible for the building, integration and testing of components to
@@ -49,9 +50,9 @@
           in Python improved substantially, as well as my interpersonal skills
           in a team dynamic.
         </p>
+        <img src="/images/SoundFollower/SF3.jpg" alt="" />
       </div>
       <div class="section">
-        <img src="/images/SoundFollower/SF4.jpg" alt="" />
         <p>
           The result of the project was a fully autonomous robot capable of
           being tuned to follow any frequency between 100Hz and 20,000Hz, and
@@ -62,6 +63,7 @@
           the initial brief and requirements. The team received a high mark for
           this work.
         </p>
+        <img src="/images/SoundFollower/SF4.jpg" alt="" />
       </div>
     </div>
     <div class="skills">
