--- a/Contact.html
+++ b/Contact.html
@@ -14,9 +14,9 @@
       ></a>
       <h1>Get In Touch With Me</h1>
       <img
-        src="/icons/GitHubIcon.png"
+        src="/icons/ContactPageIcon.png"
         alt=""
-        style="height: 40px; width: 40px"
+        style="height: 50px; width: 50px; filter: invert(90%)"
       />
     </header>
     <p>
@@ -27,7 +27,7 @@
     </p>
     <div>
       <div>
-        <h1>Send Me An E-mail!</h1>
+        <h1>Send Me An E-Mail!</h1>
         <a href="mailto: ahren.mctaggart@outlook.com">
           <button>
             <img src="/icons/MessageIcon.png" alt="" />
