--- a/MioTag.html
+++ b/MioTag.html
@@ -13,11 +13,12 @@
           <img src="/icons/BackIcon.png" alt="" /></button
       ></a>
       <h1>MioTag: Stroke Rehabilitation</h1>
-      <img src="/icons/YouTubeIcon.png" alt="" style="height: 30%" />
+      <a href="https://www.youtube.com/watch?v=Qi_cOhn397g" target="_blank">
+        <img src="/icons/YouTubeIcon.png" alt="" />
+      </a>
     </header>
     <div class="container">
       <div class="section">
-        <img src="/images/MioTag/Mio3.png" alt="" />
         <p>
           This project served as my Master's thesis at the University of
           Strathclyde. It was completed alongside my teammates, Filip Lejhanec,
@@ -28,9 +29,9 @@
           with a mobile device to creater an interactive platform to assist with
           the rehabilitation of nerve damage victims, primarily stroke patients.
         </p>
+        <img src="/images/MioTag/Mio3.png" alt="" />
       </div>
       <div class="section">
-        <img src="/images/MioTag/Mio1.png" alt="" />
         <p>
           I developed the concept for the platform in late 2018, and spent my
           dissertation (Wi-Fi Activity Monitor) building the foundations, before
@@ -39,9 +40,9 @@
           hardware developer of the project, and found the development process
           to be very fulfilling and creative.
         </p>
+        <img src="/images/MioTag/Mio1.png" alt="" />
       </div>
       <div class="section">
-        <img src="/images/MioTag/Mio2.png" alt="" />
         <p>
           After noticing the difficulty surrounding stroke rehabilitation, such
           as long wait times, few available appointments, and a lack of
@@ -53,9 +54,9 @@
           is also social, with friends and family able to connect with each
           other to provide a community of support.
         </p>
+        <img src="/images/MioTag/Mio2.png" alt="" />
       </div>
       <div class="section">
-        <img src="/images/MioTag/Mio4.png" alt="" />
         <p>
           As the project lead, I was responsible for guiding the outcome in the
           right direction, using my initial vision of what the platform could
@@ -67,9 +68,9 @@
           selected all the components and built the PCB on EasyEDA in
           conjunction with Leo McKeever and Filip Lejhanec.
         </p>
+        <img src="/images/MioTag/Mio4.png" alt="" />
       </div>
       <div class="section">
-        <img src="/images/MioTag/Mio6.png" alt="" />
         <p>
           The final product was of a very high standard and conformed to the
           requirements set out initially, even in the midst of a global
@@ -80,6 +81,7 @@
           charging and a well designed mobile app. To get a full overview,
           please follow the YouTube link in the header of this page.
         </p>
+        <img src="/images/MioTag/Mio6.png" alt="" />
       </div>
     </div>
     <div class="skills">
