--- a/WifiMonitor.html
+++ b/WifiMonitor.html
@@ -14,48 +14,61 @@
           <img src="/icons/BackIcon.png" alt="" /></button
       ></a>
       <h1>Wi-Fi Activity Monitor</h1>
-      <img src="/icons/YouTubeIcon.png" alt="" style="height: 30%" />
+      <a href="https://www.youtube.com/watch?v=vPIR2IfIHSg" target="_blank">
+        <img src="/icons/YouTubeIcon.png" alt="" style="height: 40px" />
+      </a>
     </header>
     <div class="container">
       <div class="section">
-        <img src="/images/MioTag/Mio4.png" alt="" />
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus
-          laudantium molestiae perspiciatis corrupti officiis veniam vitae
-          blanditiis molestias. Sunt accusamus eligendi, sequi tempora dolore
-          aliquam expedita minus quasi adipisci velit voluptate incidunt in
-          pariatur amet, animi beatae debitis.
+          This project was my 4<sup>th</sup> year dissertation project, and the
+          goal was to develop a device that could monitor motion and provide
+          feedback to a user. The project was open ended, so I decided real time
+          feedback would be the most useful and effective. In essence, this
+          project developed the fundamentals that I used for my 5<sup>th</sup>
+          year smart glove project, MioTag. To give a high level overview of the
+          project, I was to develop the software and hardware of a device to
+          produce a monitoring platform that physiotherapists and users could
+          use to track and motivate progress, through real time audio and visual
+          feedback, and a database.
         </p>
+        <img src="/images/WifiMonitor/Activity.png" alt="" />
       </div>
       <div class="section">
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus
-          laudantium molestiae perspiciatis corrupti officiis veniam vitae
-          blanditiis molestias. Sunt accusamus eligendi, sequi tempora dolore
-          aliquam expedita minus quasi adipisci velit voluptate incidunt in
-          pariatur amet, animi beatae debitis.
+          I used many languages that worked together in this project to produce
+          the final output, the main of which being Python. I used Python to
+          transmit data over a WebSocket TCP, using a Raspberry Pi and a
+          SenseHat to give reliable orientation data. This data transmitted to a
+          mobile application developed by MIT App Inventor to prototype it. Once
+          an activity was complete, the user could submit it to a web server
+          hosted on Digital Ocean, where backend PHP I developed communicated
+          with a SQL database to store and access information about users.
         </p>
-        <img src="/images/MioTag/Mio1.png" alt="" />
-      </div>
-      <div class="section">
-        <img src="/images/MioTag/Mio2.png" alt="" />
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus
-          laudantium molestiae perspiciatis corrupti officiis veniam vitae
-          blanditiis molestias. Sunt accusamus eligendi, sequi tempora dolore
-          aliquam expedita minus quasi adipisci velit voluptate incidunt in
-          pariatur amet, animi beatae debitis.
-        </p>
+        <img src="/images/WifiMonitor/MITAppInventor.jpg" alt="" />
       </div>
       <div class="section">
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus
-          laudantium molestiae perspiciatis corrupti officiis veniam vitae
-          blanditiis molestias. Sunt accusamus eligendi, sequi tempora dolore
-          aliquam expedita minus quasi adipisci velit voluptate incidunt in
-          pariatur amet, animi beatae debitis.
+          An individual project like this required a lot of self-motivation and
+          creativity, as it was very open ended. The vast number of disciplines
+          covered (device, application, server and database) meant that I had to
+          be very versatile and motivated to learn new things. The end result
+          fulfilled all the main requirements, with a novel concept for remote
+          rehabilitation now being available to build on. On top of this, my
+          confidence in programming increased largely.
         </p>
-        <img src="/images/MioTag/Mio8.png" alt="" />
+        <img src="/images/WifiMonitor/PHP.png" alt="" />
+      </div>
+      <div class="section">
+        <p>
+          This project received a high mark (76%), and was essential in giving
+          the 5<sup>th</sup> year masters project a strong headstart into
+          development, as my research, concepts and algorithms could be applied
+          in the context of a team to further development of MioTag. A full
+          video of this project can be found by following the link in the header
+          of this page.
+        </p>
+        <img src="/images/WifiMonitor/Emulator.png" />
       </div>
     </div>
     <div class="skills">
@@ -64,13 +77,11 @@
           Soft Skills Used
         </button>
         <ul class="accordionContent">
-          <li>Communication</li>
-          <li>Teamwork</li>
+          <li>Self Motivation</li>
           <li>Time Management</li>
-          <li>Leadership</li>
+          <li>Versatility</li>
           <li>Problem Solving</li>
-          <li>Dependability</li>
-          <li>Flexibility</li>
+          <li>Determination</li>
           <li>Creativity</li>
         </ul>
       </div>
@@ -79,19 +90,17 @@
           Technical Skills Used
         </button>
         <ul class="accordionContent">
-          <li>CAD (SolidWorks)</li>
-          <li>PCB Design</li>
+          <li>Python Programming</li>
+          <li>PHP</li>
+          <li>MIT App Inventor</li>
+          <li>SQL Databases</li>
           <li>Report Writing</li>
-          <li>Manufacturing Frame</li>
-          <li>C Programming</li>
-          <li>Electronic Design</li>
+          <li>Command Line</li>
           <li>Version Control</li>
         </ul>
       </div>
     </div>
-
     <footer>Copyright &copy Ahren McTaggart 2020</footer>
-
     <script src="js/Miotag.js"></script>
   </body>
 </html>
