--- a/Hobbies.html
+++ b/Hobbies.html
@@ -67,9 +67,12 @@
         </p>
       </div>
       <div>
-        <img src="/Hobbies/Design.png" alt="" />
-        <h1>Designing</h1>
-        <p></p>
+        <img src="/Hobbies/Editing.png" alt="" />
+        <h1>Editing</h1>
+        <p>
+          Particularly when I have completed a long project, I love working on
+          image and video editing to better present my work. 
+        </p>
       </div>
     </div>
     <div>
